# MaxScale

server/modules/filter/: CMakeLists.txt  querylogfilter.c
server/modules/filter/querylogfilter/: querylogfilter.c
server/modules/filter/querylogfilter/unittest/: test_querylogfilter.cpp
server/modules/filter/unittest/: test_querylogfilter.cpp
